--- a/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
+++ b/GForum/GForum.Web.Tests/GForum.Web.Tests.csproj
@@ -125,6 +125,8 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfigTests.cs" />
     <Compile Include="App_Start\RouteConfigTests.cs" />
+    <Compile Include="Areas\Admin\Controllers\CategoriesControllerTests.cs" />
+    <Compile Include="Areas\Admin\Controllers\PostsControllerTests.cs" />
     <Compile Include="Controllers\AccountControllerTests.cs" />
     <Compile Include="Controllers\CategoriesControllerTests.cs" />
     <Compile Include="Controllers\ManageControllerTests.cs" />
