--- a/GForum/GForum.Web/GForum.Web.csproj
+++ b/GForum/GForum.Web/GForum.Web.csproj
@@ -344,6 +344,7 @@
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\Comments\_CommentAddPartial.cshtml" />
     <Content Include="Views\Posts\_PostListItemPartial.cshtml" />
+    <Content Include="Views\Account\_UserAvatarPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
